...
            model = gifUri,
            contentDescription = "Car logo",
            modifier = Modifier.size(150.dp, 150.dp))
        Text("Welcome!!",
            fontSize = 30.sp,
            fontWeight = FontWeight.Bold)
        Text("Work By Car",
            fontSize = 40.sp,
            fontWeight = FontWeight.ExtraLight
        )
    }
}
