...
        "Russia (+7)",
        "Saudi Arabia (+966)",
        "Serbia (+381)",
        "Singapore (+65)",
        "South Africa (+27)",
        "South Korea (+82)",
        "Spain (+34)",
        "Sri Lanka (+94)",
        "Sudan (+249)",
        "Sweden (+46)",
        "Switzerland (+41)",
        "Syria (+963)",
        "Taiwan (+886)",
...
