...

    Scaffold(
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        text = "Trips",
                        style = MaterialTheme.typography.headlineMedium,
                        fontWeight = FontWeight.SemiBold,
                        color = Color(0xFF0277BD)
                    )
                },
                colors = TopAppBarDefaults.topAppBarColors(
...
            }
        } else {
            LazyColumn(
                modifier = Modifier
                    .fillMaxSize()
                    .padding(paddingValues)
                    .testTag("TripsList")
            ) {
                item {
                    Text(
                        text = "My booked trips",
                        style = MaterialTheme.typography.headlineMedium,
                        fontWeight = FontWeight.Bold,
                        modifier = Modifier.fillMaxWidth(),
                        textAlign = TextAlign.Center
                    )
                }
...
                            )
                        }
                    }
                }
                item {
                    Text(
                        text = "My posted trips",
                        style = MaterialTheme.typography.headlineMedium,
                        fontWeight = FontWeight.Bold,
                        modifier = Modifier.fillMaxWidth(),
                        textAlign = TextAlign.Center
                    )
                }
...
