...
                fontWeight = FontWeight.Medium,
                color = Color.White,
                textAlign = TextAlign.Center
            )

            ClickableConfirmationOption("Yes, I would like to publish it", true, navController, "postReturn")
            ClickableConfirmationOption("No, finish the process", false, navController, "dontPostReturn")
        }
    }
}

@Composable
fun ClickableConfirmationOption(text: String, type: Boolean, navController: NavController, tag: String) {
...
